# hello-mkdocstrings

./: .envrc  404.html  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml
docs/: README.md
src/foo/: __init__.py
src/hello/: __init__.py  _hello.py
