[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
build = ["hatch"]
docs = [
  "gitpython",
  "mdx-truly-sane-lists>=1.3,<2",
  "mike>=2.1.3,<3",
  "mkdocs-autorefs>=1.4.1,<2",
  "mkdocs-gen-files>=0.5.0,<0.6",
  "mkdocs-git-committers-plugin-2>=2.5.0,<3",
  "mkdocs-git-revision-date-localized-plugin>=1.4.5,<2",
  "mkdocs-include-markdown-plugin>=7.1.5,<8",
  "mkdocs-literate-nav>=0.6.2,<0.7",
  "mkdocs-material[imaging]>=9.6.9,<10",
  "mkdocs-section-index>=0.3.9,<0.4",
  "mkdocs>=1.6.1,<2",
  "mkdocstrings-python>=1.16.8,<2",
  "mkdocstrings>=0.29.0,<0.30",
  "pymdown-extensions>=10.14.3,<11",
  "ruff",
]

[project]
dependencies = ["lazy-loader>=0.4"]
description = "Add your description here"
name = "hello-mkdocstrings"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[tool.hatch.build.targets.sdist]
only-include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]

[tool.uv]
default-groups = ["build", "docs"]
